--- a/src/index.html
+++ b/src/index.html
@@ -14,14 +14,14 @@
         <div id="boxGeneral" class="bg-gradient-to-t from-sky-500 to-indigo-500 rounded-xl flex flex-col items-center shadow-3xl ">
             <div class="mt-8 w-full text-center">
                 <form class="w-full p-2 relative" action="">
-                    <input id="inputCity" class="w-80 p-2 rounded-lg outline-none" type="text" placeholder="Digite um local">
+                    <input id="inputCity" class="w-80 p-2 rounded-lg outline-none" type="text" placeholder="Digite um local e a sigla do pais (ex: Roma, IT)">
                     <button id="btnInputCity" class="absolute right-12 top-0 bottom-0 bg-transparent border-none px-2 py-1"><i class="fa-solid fa-magnifying-glass"></i></button>
                 </form>
             </div><!-- Pesquisa -->
 
             <div id="preLocation" class="preLocation mt-3">
                 <div class="boxPreLocation ml-3">
-                    <span id="spanValue" class="text-2xl text-white">Orlando</span>
+                    <span id="spanValue" class="text-2xl text-white">Paris</span>
                 </div><!--boxPrelocation-->
             
                 <div class="boxPreLocation mr-3">
